# customer-support-assistant

./: .coverage  .env.example  .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  customer_support_assistant.py  pyproject.toml  requirements.txt  run.py  setup.py  test_catalog_search.py
.github/workflows/: ci.yml
customer_support_assistant/: main.py
customer_support_assistant/tools/: __init__.py  catalog.py  orders.py
docs/source/: api.rst  architecture.rst  block_diagram.rst  changelog.rst  conf.py  contributing.rst  detailed_documentation.rst  development.rst  index.rst  installation.rst  make.py  overview.rst  tools.rst  troubleshooting.rst  usage.rst
docs/source/_static/: block_diagram.puml
src/customer_support_assistant/: __init__.py  main.py
src/customer_support_assistant/tools/: catalog.py  knowledge_base.py  orders.py
tests/: conftest.py  test_assistant.py  test_integration.py
